foursquare dependency is added.

--- a/Android/AndroidPlay/app/src/main/AndroidManifest.xml
+++ b/Android/AndroidPlay/app/src/main/AndroidManifest.xml
@@ -25,5 +25,7 @@
         <activity android:name=".PreferenceSelectActivity"
             android:parentActivityName=".MainActivity"/>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
 </manifest>
