--- a/Android/AndroidPlay/app/src/main/AndroidManifest.xml
+++ b/Android/AndroidPlay/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.saygindogu.saygin.androidplay">
+    package="com.cogeq.cogeqapp">
 
     <application
         android:allowBackup="true"
