--- a/Android/AndroidPlay/app/src/main/AndroidManifest.xml
+++ b/Android/AndroidPlay/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
         <activity
             android:name=".SettingsDrawerActivity"
             android:label="@string/title_activity_settings_drawer"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Tabbed"
+            android:label="@string/title_activity_tabbed"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
