--- a/Android/SmartTravelling(COGEQ)/app/build.gradle
+++ b/Android/SmartTravelling(COGEQ)/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.androidbelieve.drawerwithswipetabs"
+        applicationId "com.cogeq.cogeqapp"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
