--- a/Android/SmartTravelling(COGEQ)/app/build.gradle
+++ b/Android/SmartTravelling(COGEQ)/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.foursquare:foursquare-android-oauth:1.0.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
 }
